--- a/config/breast_cancer_inference_config.json
+++ b/config/breast_cancer_inference_config.json
@@ -1,9 +1,8 @@
 {
-    "mode": "train",
+    "mode": "inference",
     "datasetName": "breast_cancer",
     "datasetPath": "",
-    "modelPathToSave": "models/breast_cancer_model",
-    "modelPathToLoad": "",
+    "modelPathToLoad": "models/breast_cancer_model",
     "learningRate": 0.001,
     "epochs": 1000,
     "trainRatio": 0.7,
