--- a/config/iris_config.json
+++ b/config/iris_config.json
@@ -1,6 +1,9 @@
 {
+    "mode": "train",
     "datasetName": "iris",
     "datasetPath": "",
+    "modelPathToSave": "models/iris_model",
+    "modelPathToLoad": "",
     "learningRate": 0.01,
     "epochs": 1000,
     "trainRatio": 0.7,
